--- a/create-first-docker-container/Dockerfile
+++ b/create-first-docker-container/Dockerfile
@@ -2,7 +2,7 @@ FROM node:20
 
 WORKDIR /app
 
-COPY package.json .
+COPY package*.json ./
 
 RUN npm install
 
@@ -10,4 +10,4 @@ COPY . .
 
 EXPOSE 5000
 
-CMD [ "node", "app.mjs"]
+CMD ["node", "app.mjs"]
