--- a/create-first-docker-container/package.json
+++ b/create-first-docker-container/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "create-first-docker-container",
+  "name": "docker-complete",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "https://git-codecommit.us-east-1.amazonaws.com/v1/repos/docker-complete-guide"
+  },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
