--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
   "workspaceFolder": "/app",
   "mounts": [
     // Bind mount for your local project
-    "source=/c/Projects/next-level/Docker/docker-with-typescipt-backend,target=/app,type=bind",
+    "source=/C:/Users/mosta/OneDrive/Desktop/Programming-hero/Lavel-02/Intro-Docker,target=/app,type=bind",
 
     // Named volume for logs (similar to: -v ts-docker-logs://app/logs)
     "source=ts-docker-logs,target=/app/logs,type=volume",
